<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"

    >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeMenuId"
            android:title="@string/homeMenu"
            android:icon="@drawable/ic_home_black_24dp"
            />
        <item
            android:id="@+id/profileMenuId"
            android:title="@string/profileMenu"
            android:icon="@drawable/ic_profile_black_24dp"
            />
        <item
            android:id="@+id/settingMenuId"
            android:title="@string/settingMenu"
            android:icon="@drawable/ic_settings_black_24dp"
            />

        <item
            android:id="@+id/fileMenuId"
            android:title="@string/save_file"
            android:icon="@drawable/ic_file_black_24dp"
            />
        <item
            android:id="@+id/logoutMenuId"
            android:title="@string/logoutMenu"
            android:icon="@drawable/ic_logout_new_black_24dp"
            />

    </group>

    <item android:title="@string/communicateMenu">
        <menu>

            <item
                android:id="@+id/webMenuId"
                android:title="@string/website"
                android:icon="@drawable/ic_lwebsite_black_24dp"
                />
            <item
                android:id="@+id/shareMenuId"
                android:title="@string/shareMenu"
                android:icon="@drawable/ic_share_black_24dp"
                />

            <item
                android:id="@+id/aboutUsMenuId"
                android:title="@string/about_usMenu"
                android:icon="@drawable/ic_about_black_24dp"
                />
            <item
                android:id="@+id/rateUsMenuId"
                android:title="@string/rate_usMenu"
                android:icon="@drawable/ic_rate_black_24dp"
                />
            <item
                android:id="@+id/feedbackMenuId"
                android:title="@string/feedbackMenu"
                android:icon="@drawable/ic_feedback_black_24dp"
                />


        </menu>

    </item>

</menu>